# ZenBoard_VeloComputer

./: CLAUDE.md  LICENSE  README.md
velocomputer/: BUILDING.md  BUILD_ISSUES.md  CMakeLists.txt  FINAL_CHECKLIST.md  PROJECT_SUMMARY.md  README.md  SETUP_ESPIDF_V551.md  sdkconfig.defaults  test_espidf.sh  verify_project.sh
velocomputer/main/: CMakeLists.txt  config.c  config.h  display.c  display.h  gps.c  gps.h  gpx.h  main.bak  main.c  network.h  sensors.c  sensors.h  storage.c  storage.h  telemetry.c  telemetry.h
velocomputer/main/components/: gpx.c
velocomputer/main/components/core/: CMakeLists.txt  config.c  config.h  telemetry.c  telemetry.h
velocomputer/main/components/gps/: CMakeLists.txt  gps.c  gps.h
velocomputer/main/components/gpx/: CMakeLists.txt  gpx.c  gpx.h
velocomputer/main/components/network/: CMakeLists.txt  network.c  network.h
velocomputer/main/components/sensors/: CMakeLists.txt  sensors.c  sensors.h
velocomputer/main/components/storage/: CMakeLists.txt  storage.c  storage.h
